Resolves: tdf#131996 set_sensitive should be set_active

search and replace went wrong in:

commit b94214350e6e3d0252c09f203a3ce7807a179f90
Date:   Thu Jul 25 14:09:09 2019 +0100

    weld SdPublishingDlg

Change-Id: I10af85633758a6e4c354f6fc957624122dd01f3c